; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_topstar-laptop.c_tps_get_key_by_scancode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_topstar-laptop.c_tps_get_key_by_scancode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tps_key_entry = type { i32 }

@topstar_keymap = common dso_local global %struct.tps_key_entry* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tps_key_entry* (i32)* @tps_get_key_by_scancode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tps_key_entry* @tps_get_key_by_scancode(i32 %0) #0 {
  %2 = alloca %struct.tps_key_entry*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.tps_key_entry*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load %struct.tps_key_entry*, %struct.tps_key_entry** @topstar_keymap, align 8
  store %struct.tps_key_entry* %5, %struct.tps_key_entry** %4, align 8
  br label %6

6:                                                ; preds = %20, %1
  %7 = load %struct.tps_key_entry*, %struct.tps_key_entry** %4, align 8
  %8 = getelementptr inbounds %struct.tps_key_entry, %struct.tps_key_entry* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %23

11:                                               ; preds = %6
  %12 = load i32, i32* %3, align 4
  %13 = load %struct.tps_key_entry*, %struct.tps_key_entry** %4, align 8
  %14 = getelementptr inbounds %struct.tps_key_entry, %struct.tps_key_entry* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 %12, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %11
  %18 = load %struct.tps_key_entry*, %struct.tps_key_entry** %4, align 8
  store %struct.tps_key_entry* %18, %struct.tps_key_entry** %2, align 8
  br label %24

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19
  %21 = load %struct.tps_key_entry*, %struct.tps_key_entry** %4, align 8
  %22 = getelementptr inbounds %struct.tps_key_entry, %struct.tps_key_entry* %21, i32 1
  store %struct.tps_key_entry* %22, %struct.tps_key_entry** %4, align 8
  br label %6

23:                                               ; preds = %6
  store %struct.tps_key_entry* null, %struct.tps_key_entry** %2, align 8
  br label %24

24:                                               ; preds = %23, %17
  %25 = load %struct.tps_key_entry*, %struct.tps_key_entry** %2, align 8
  ret %struct.tps_key_entry* %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
